maze.lessons.maze.island.IslandMaze.scala.error
Escaper:38: error: '}' expected but 'case' found.
case _ => {println("Ce cas ne devrait pas arriver. Corrigez ce problème svp.")}
^Escaper:41: error: expected class or object definition
prendBiscuit()
^Escaper:42: error: eof expected but '}' found.
}
^